feat: mvp completed

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,12 @@
 		<description></description>
 		<servlet-class>com.fssa.leavemanagement.servlet.LeaveTypeServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>LeaveBalance</servlet-name>
+		<display-name>LeaveBalance</display-name>
+		<description></description>
+		<servlet-class>com.fssa.leavemanagement.servlet.LeaveBalance</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>EmployeeRoleServlet</servlet-name>
 		<url-pattern>/EmployeeRoleServlet</url-pattern>
@@ -30,5 +36,80 @@
 		<servlet-name>EmployeeServlet</servlet-name>
 		<url-pattern>/EmployeeServlet</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>LeaveBalance</servlet-name>
+		<url-pattern>/LeaveBalance</url-pattern>
+	</servlet-mapping>
+
+
+	<error-page>
+		<!-- <exception-type>java.lang.Exception</exception-type> For handling 
+			exceptions -->
+		<error-code>500</error-code> <!-- HTTP Error code Page Not found -->
+		<location>/pageNotFound.jsp</location>
+	</error-page>
+
+	<error-page>
+		<!-- <exception-type>java.lang.Exception</exception-type> For handling 
+			exceptions -->
+		<error-code>501</error-code> <!-- HTTP Error code Page Not found -->
+		<location>/pageNotFound.jsp</location>
+	</error-page>
+	<error-page>
+		<!-- <exception-type>java.lang.Exception</exception-type> For handling 
+			exceptions -->
+		<error-code>502</error-code> <!-- HTTP Error code Page Not found -->
+		<location>/pageNotFound.jsp</location>
+	</error-page>
+	<error-page>
+		<!-- <exception-type>java.lang.Exception</exception-type> For handling 
+			exceptions -->
+		<error-code>503</error-code> <!-- HTTP Error code Page Not found -->
+		<location>/pageNotFound.jsp</location>
+	</error-page>
+	<error-page>
+		<!-- <exception-type>java.lang.Exception</exception-type> For handling 
+			exceptions -->
+		<error-code>504</error-code> <!-- HTTP Error code Page Not found -->
+		<location>/pageNotFound.jsp</location>
+	</error-page>
+	<error-page>
+		<!-- <exception-type>java.lang.Exception</exception-type> For handling 
+			exceptions -->
+		<error-code>599</error-code> <!-- HTTP Error code Page Not found -->
+		<location>/pageNotFound.jsp</location>
+	</error-page>
+
+	<error-page>
+
+		<error-code>400</error-code> <!-- HTTP Error code Page Not found -->
+		<location>/pageNotFound.jsp</location>
+	</error-page>
+
+	<error-page>
+
+		<error-code>404</error-code> <!-- HTTP Error code Page Not found -->
+		<location>/pageNotFound.jsp</location>
+	</error-page>
+
+	<error-page>
+
+		<error-code>401</error-code> <!-- HTTP Error code Page Not found -->
+		<location>/pageNotFound.jsp</location>
+	</error-page>
+
+	<error-page>
+
+		<error-code>403</error-code> <!-- HTTP Error code Page Not found -->
+		<location>/pageNotFound.jsp</location>
+	</error-page>
+
+
+	<error-page>
+
+		<error-code>409</error-code> <!-- HTTP Error code Page Not found -->
+		<location>/pageNotFound.jsp</location>
+	</error-page>
+
 
 </web-app>
