--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,14 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
+
 	<display-name>Archetype Created Web Application</display-name>
+
+
+	<welcome-file-list>
+		<welcome-file>login.jsp</welcome-file>
+	</welcome-file-list>
+
 	<servlet>
 		<servlet-name>EmployeeRoleServlet</servlet-name>
 		<display-name>EmployeeRoleServlet</display-name>
